--- a/requirements-py313.txt
+++ b/requirements-py313.txt
@@ -31,7 +31,6 @@ numpy>=2.1.0
 scipy>=1.14.0
 librosa==0.10.2.post1
 soundfile==0.12.1
-aifc
 
 # UI / server / utilities
 gradio==5.23.0
@@ -40,6 +39,9 @@ python-dotenv>=1.1.0
 pyyaml>=6.0.2
 munch==4.0.0
 matplotlib
+
+# V1-specific (DAC)
+descript-audio-codec==1.0.0
 
 # Optional (only if you need them on 3.13 and wheels exist for your platform)
 # modelscope==1.18.1
