--- a/requirements-py313.txt
+++ b/requirements-py313.txt
@@ -19,6 +19,7 @@ hydra-core==1.3.2
 transformers==4.46.3
 huggingface-hub>=0.28.1
 einops==0.8.0
+protobuf==3.20.3
 
 # Numeric & signal
 numpy>=2.1.0
