--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-accelerate
-scipy==1.13.1
-librosa==0.10.2
+accelerate>=1.7.0
+hydra-core==1.3.2
+transformers==4.46.3
 huggingface-hub>=0.28.1
-munch==4.0.0
 einops==0.8.0
-descript-audio-codec==1.0.0
+# protobuf pin compatible with descript-audiotools (<3.20)
+protobuf==3.19.6
+
+numpy>=2.1.0
+scipy>=1.14.0
+soundfile==0.12.1
+soxr
+
 gradio==5.23.0
 pydub==0.25.1
-resemblyzer
+python-dotenv>=1.1.0
+pyyaml>=6.0.2
+munch==4.0.0
+matplotlib
+
+descript-audio-codec==1.0.0
 jiwer==3.0.3
-transformers==4.46.3
-FreeSimpleGUI==5.1.1
-soundfile==0.12.1
-sounddevice==0.5.0
-modelscope==1.18.1
-funasr==1.1.5
-numpy==1.26.4
-hydra-core==1.3.2
-pyyaml
-python-dotenv
+resemblyzer>=0.1.4
